--- a/Views/Usuario/HomeNutri.cshtml
+++ b/Views/Usuario/HomeNutri.cshtml
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="~/NovaPasta/loader.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
@@ -174,18 +175,98 @@
 </head>
 
 <body>
+    <div class="overlay" id="loader-container" style="display: none;">
+        <div class="loader"></div>
+    </div>
+
     <button id="toggleDarkMode" class="btn-dark-mode">
         <i class="fas fa-moon"></i>
     </button>
     <div class="container">
+
+        <div class="mb-4 text-center">
+            <img id="profileImage" src="~/default.png" alt="Foto de perfil" class="rounded-circle" width="150"
+                 height="150">
+        </div>
+
         <!-- Botões no canto superior direito -->
         <div class="button-container">
+            <button class="btn btn-outline-dark" data-bs-toggle="modal"
+                    data-bs-target="#settingsModal">
+                Configurações
+            </button>
             <button class="btn btn-danger" id="btnLogout">
                 <i class="fas fa-door-open"></i>
             </button>
             <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#settingsModal" id="btnsocial">
                 &#64
             </button>
+        </div>
+
+        <!-- Modal de Configurações -->
+        <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="settingsModalLabel">Configurações da Conta</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="settingsForm">
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Nome</label>
+                                <input type="text" class="form-control" id="name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">E-mail</label>
+                                <input type="email" class="form-control" id="email">
+                            </div>
+                            <div class="mb-3">
+                                <label for="phone" class="form-label">Telefone</label>
+                                <input type="text" class="form-control" id="phone">
+                            </div>
+                            <div class="mb-3">
+                                <label for="sex" class="form-label">Sexo</label>
+                                <select class="form-control" id="sex">
+                                    <option value="" selected>Escolha seu sexo</option>
+                                    <option value="masculino">Masculino</option>
+                                    <option value="feminino">Feminino</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="idade" class="form-label">Idade</label>
+                                <input type="number" class="form-control" id="idade" min="18" max="99" step="18">
+                            </div>
+                            <div class="mb-3">
+                                <label for="peso" class="form-label">Peso (Kg)</label>
+                                <input type="number" class="form-control" id="peso" min="0" step="1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="altura" class="form-label">Altura (cm)</label>
+                                <input type="number" class="form-control" id="altura" min="0" step="1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="profilePhoto" class="form-label">Foto</label>
+                                <input type="file" id="profilePhoto" accept="image/*">
+                            </div>
+                            <div class="mb-3">
+                                <label for="oldPassword" class="form-label">Senha Antiga</label>
+                                <input type="password" class="form-control" id="oldPassword">
+                            </div>
+                            <div class="mb-3">
+                                <label for="newPassword" class="form-label">Nova Senha</label>
+                                <input type="password" class="form-control" id="newPassword">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                        <button type="button" class="btn btn-primary" onclick="saveChanges()">Salvar alterações</button>
+                        <button type="button" class="btn btn-danger" onclick="deleteAccount()">Deletar conta</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModalLabel"
@@ -253,6 +334,14 @@
     </div>
 
     <script>
+        function ColocaCarregando() {
+            document.getElementById("loader-container").style.display = "flex";
+        }
+
+        function TiraCarregando() {
+            document.getElementById("loader-container").style.display = "none";
+        }
+
         $(document).ready(function () {
             const token = localStorage.getItem("token");
             if (!token) {
@@ -357,14 +446,14 @@
                 })
                     .then(response => {
                         if (!response.ok) {
-                            throw new Error("Erro ao alterar senha.");
+                            throw new Error("A senha deve conter no mínimo 8 caracteres, com pelo menos uma letra maiúscula, uma letra minúscula, um número e um caractere especial.");
                         }
                         alert("Senha alterada com sucesso! Faça login novamente.");
                         logout();
                     })
                     .catch(error => {
                         console.error("Erro ao alterar senha:", error);
-                        alert("Erro ao alterar senha.");
+                        alert("A senha deve conter no mínimo 8 caracteres, com pelo menos uma letra maiúscula, uma letra minúscula, um número e um caractere especial.");
                     });
             }
             window.changePassword = changePassword;
@@ -542,6 +631,126 @@
                     alert("Erro ao deletar conta.");
                 });
         }
+
+        function saveChanges() {
+            const token = localStorage.getItem("token");
+            if (document.getElementById("idade").value < 99 && document.getElementById("idade").value > 18) {
+                console.log(document.getElementById("sex").value)
+                if (document.getElementById("sex").value == "masculino" || document.getElementById("sex").value == "feminino") {
+                    if (document.getElementById("peso").value > 0) {
+                        if (document.getElementById("altura").value > 0) {
+                            console.log(token)
+
+                            ColocaCarregando();
+
+                            const userData = {
+                                Nome: document.getElementById("name").value,
+                                Telefone: document.getElementById("phone").value,
+                                Email: document.getElementById("email").value,
+                                Sexo: document.getElementById("sex").value,
+                                Idade: document.getElementById("idade").value,
+                                Peso: document.getElementById("peso").value,
+                                Altura: document.getElementById("altura").value,
+                                SenhaAntiga: document.getElementById("oldPassword").value,
+                                NovaSenha: document.getElementById("newPassword").value.trim() === "" ? null : document.getElementById("newPassword").value
+                            };
+
+                            console.log(userData)
+
+                            fetch("/update/user/yourself", {
+                                method: "PUT",
+                                headers: {
+                                    "Authorization": `Bearer ${token}`,
+                                    "Content-Type": "application/json"
+                                },
+                                body: JSON.stringify(userData)
+                            })
+                                .then(async response => {
+                                    const json = await response.json();
+
+                                    if (!response.ok) {
+                                        let errorMessage = "Erro ao salvar";
+                                        TiraCarregando();
+
+                                        if (json.error) {
+                                            errorMessage = json.error;
+                                        } else if (json.errors) {
+                                            const firstErrorKey = Object.keys(json.errors)[0];
+                                            if (json.errors[firstErrorKey] && json.errors[firstErrorKey].length > 0) {
+                                                errorMessage = json.errors[firstErrorKey][0];
+                                            }
+                                        }
+
+                                        throw new Error(errorMessage);
+                                    }
+
+
+                                    const fileInput = document.getElementById("profilePhoto");
+
+                                    const formData = new FormData();
+                                            if (fileInput.files.length > 0) {
+                                                formData.append("Foto", fileInput.files[0]); // Adiciona a foto ao FormData
+                                            }
+
+                                    try {
+                                             // Verifica se há dados para enviar
+                                            if (formData.has("Foto")) {
+                                                const response = await fetch("/update/user/photo", {
+                                                    method: "PUT",
+                                                    headers: {
+                                                        "Authorization": `Bearer ${token}`
+                                                    },
+                                                    body: formData
+                                                });
+
+                                                const result = await response.json();
+
+                                                if (response.ok) {
+                                                    TiraCarregando();
+                                                    alert("Alterações salvas com sucesso! \nFaça Login novamente");
+                                                    logout(); // Recarrega as informações no modal
+                                                } else {
+                                                    TiraCarregando();
+                                                    alert(result.error || "Erro ao atualizar a foto.");
+                                                }
+                                            } else {
+                                                TiraCarregando();
+                                                    alert("Alterações salvas com sucesso! \nFaça Login novamente");
+                                                    logout(); // Recarrega as informações no modal
+                                            }
+                                    } catch (error) {
+                                        TiraCarregando();
+                                        console.error("Erro ao enviar a foto:", error);
+                                    }
+                                })
+                                .catch(error => {
+                                    TiraCarregando();
+                                    console.error("Erro ao salvar alterações:", error);
+                                    alert("Erro ao salvar alterações.");
+                                });
+                        } else {
+                            TiraCarregando();
+                            console.error("Digite uma altura");
+                            alert("Digite uma altura");
+                        }
+                    } else {
+                        TiraCarregando();
+                        console.error("Digite um peso");
+                        alert("Digite um peso");
+                    }
+                } else {
+                    TiraCarregando();
+                    console.error("Escolha um sexo");
+                    alert("Escolha um sexo");
+                }
+            }
+            else {
+                TiraCarregando();
+                console.error("Digite uma idade entre 18 anos e 99 anos");
+                alert("Digite uma idade entre 18 anos e 99 anos");
+            }
+        }
+
         function saveChangesocial() {
             const token = localStorage.getItem("token");
             console.log(token)
@@ -586,6 +795,42 @@
                 });
         }
 
+        function loadContent() {
+            const token = localStorage.getItem("token");
+            if (!token) {
+                window.location.href = "/login";
+                return;
+            }
+            // Chama a requisição para preencher o modal com os dados do usuário
+            fetch("/user/yourself", {
+                method: "GET",
+                headers: {
+                    "Authorization": `Bearer ${token}`,
+                    "Content-Type": "application/json"
+                }
+            })
+                .then(response => response.json())
+                .then(user => {
+                    if (user) {
+                        // Preenche os campos do modal com os dados do usuário
+                        document.getElementById("name").value = user.nome;
+                        document.getElementById("email").value = user.email;
+                        document.getElementById("phone").value = user.telefone || '';
+                        document.getElementById("sex").value = user.sexo || '';
+                        document.getElementById("peso").value = user.peso || '';
+                        document.getElementById("altura").value = user.altura || '';
+                        document.getElementById("idade").value = user.idade || '';
+
+                        if (user.foto) {
+                            document.getElementById("profileImage").src = user.foto;
+                        }
+                    }
+                })
+                .catch(error => {
+                    console.error("Erro ao carregar dados do usuário:", error);
+                });
+        }
+
         document.addEventListener("DOMContentLoaded", function () {
             const toggleButton = document.getElementById("toggleDarkMode");
             const body = document.body;
@@ -606,6 +851,8 @@
                     toggleButton.innerHTML = '<i class="fas fa-moon"></i>';
                 }
             });
+
+            loadContent();
         });
     </script>
 </body>
