--- a/Views/Usuario/HomeUsuario.cshtml
+++ b/Views/Usuario/HomeUsuario.cshtml
@@ -392,7 +392,7 @@
 
                 mensagens.forEach(msg => {
                     const p = document.createElement("p");
-                    p.textContent = msg.mensage; // Supondo que a mensagem tenha um campo 'texto'
+                    p.textContent = msg.nutricionista.role + " " + msg.nutricionista.nome + " - " + msg.mensage; // Supondo que a mensagem tenha um campo 'texto'
                     chatBox.appendChild(p);
                 });
             })
