--- a/Views/Usuario/HomeUsuario.cshtml
+++ b/Views/Usuario/HomeUsuario.cshtml
@@ -440,7 +440,7 @@
                     </div>
                     <button class="btn btn-outline-dark" onclick="salvarAlimentosAlergicos()">Salvar</button>
                     <button class="btn btn-outline-dark" data-bs-toggle="modal"
-                data-bs-target="#modalAddAlimentos">Adicionar Alimento</button>
+                data-bs-target="#modalAddAlimentos">Adicionar Alimento Alergicos</button>
                 </div>
             </div>
             </div>
@@ -1177,6 +1177,7 @@
                     method: "GET",
                     headers: {
                         "Content-Type": "application/json",
+                        "Access-Control-Allow-Origin": "*",
                         "Authorization": `Bearer ${token}` // Enviando o token corretamente
                     }
                 })
