Adição de bloqueia de comida alergica e mudanca CSS Chat

--- a/Views/Usuario/HomeAdmin.cshtml
+++ b/Views/Usuario/HomeAdmin.cshtml
@@ -168,7 +168,7 @@
         <div class="loader"></div>
     </div>
 
-    <button id="toggleDarkMode" class="btn-dark-mode">
+    <button style="display: none" id="toggleDarkMode" class="btn-dark-mode">
         <i class="fas fa-moon"></i>
     </button>
     <div class="container">
