--- a/Views/Usuario/Login.cshtml
+++ b/Views/Usuario/Login.cshtml
@@ -119,7 +119,7 @@
 </style>
 
 <body>
-    <button id="toggleDarkMode" class="btn-dark-mode">
+    <button style="display: none" id="toggleDarkMode" class="btn-dark-mode">
         <i class="fas fa-moon"></i>
     </button>
 
