--- a/Views/Usuario/HomeUsuario.cshtml
+++ b/Views/Usuario/HomeUsuario.cshtml
@@ -357,7 +357,7 @@
             <button class="btn btn-outline-dark" data-bs-toggle="modal"
                 data-bs-target="#settingsModal">Configurações</button>
             <button class="btn btn-outline-dark" data-bs-toggle="modal"
-                data-bs-target="#modalAlimentos">Alimentos</button>
+                data-bs-target="#modalAlimentos">Alimentos Alergicos</button>
             <button class="btn btn-danger ms-2" onclick="logout()">Logout</button>
         </div>
 
